--- a/src/Web/src/assets/css/styles.css
+++ b/src/Web/src/assets/css/styles.css
@@ -1,22 +1,29 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 html,
 body {
-  box-sizing: border-box;
   margin: 0;
-  padding: 0;
   font-family: "Noto Sans", sans-serif;
 }
 
 ul.nav-list {
-  list-style-type: none;
   margin: 0;
   padding: 0;
+  list-style-type: none;
   text-align: center;
+  overflow: hidden;
+  font-size: large;
+  display: flex;
 }
 
 ul.nav-list li.nav-list-item {
   display: inline;
   font-size: large;
-  margin-right: 1rem;
+  margin-right: 1.5em;
 }
 
 ul.nav-list li.nav-list-item:last-child {
@@ -24,5 +31,5 @@ ul.nav-list li.nav-list-item:last-child {
 }
 
 nav.navbar {
-  padding: 0.75rem 0;
+  padding: 0.75em 0;
 }
