--- a/src/Web/src/assets/css/styles.css
+++ b/src/Web/src/assets/css/styles.css
@@ -10,14 +10,20 @@ body {
   font-family: "Noto Sans", sans-serif;
 }
 
-ul.nav-list {
+ul,
+ol {
+  list-style-type: none;
   margin: 0;
   padding: 0;
-  list-style-type: none;
+}
+
+ul.nav-list {
   text-align: center;
   overflow: hidden;
   font-size: large;
   display: flex;
+  justify-content: center;
+  flex-direction: row;
 }
 
 ul.nav-list li.nav-list-item {
