--- a/src/Web/src/assets/css/styles.css
+++ b/src/Web/src/assets/css/styles.css
@@ -17,6 +17,34 @@ ol {
   padding: 0;
 }
 
+.header {
+  position: sticky;
+  display: block;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+}
+
+.content {
+  flex: 1 0 auto;
+}
+
+.footer {
+  flex-shrink: 0;
+}
+
+.kb-craft-logo {
+  font-family: "Gruppo", cursive;
+  font-size: large;
+  text-shadow: 0px 1px 1px #9e9e9e;
+  color: azure;
+}
+
+.nav-brand {
+}
+
 ul.nav-list {
   text-align: center;
   overflow: hidden;
@@ -36,6 +64,14 @@ ul.nav-list li.nav-list-item:last-child {
   margin-right: 0;
 }
 
+ul.nav-list li.nav-list-item.cta {
+  text-transform: uppercase;
+}
+
 nav.navbar {
   padding: 0.75em 0;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
