--- a/src/Web/src/assets/css/styles.css
+++ b/src/Web/src/assets/css/styles.css
@@ -8,6 +8,7 @@ html,
 body {
   margin: 0;
   font-family: "Noto Sans", sans-serif;
+  height: 100%;
 }
 
 ul,
@@ -15,6 +16,16 @@ ol {
   list-style-type: none;
   margin: 0;
   padding: 0;
+}
+
+h1,
+h2,
+h3 {
+  text-align: center;
+}
+
+.heading {
+  text-align: center;
 }
 
 .header {
@@ -33,6 +44,7 @@ ol {
 
 .footer {
   flex-shrink: 0;
+  height: 2rem;
 }
 
 .kb-craft-logo {
@@ -40,6 +52,7 @@ ol {
   font-size: large;
   text-shadow: 0px 1px 1px #9e9e9e;
   color: azure;
+  text-decoration: none;
 }
 
 .nav-brand {
@@ -57,7 +70,7 @@ ul.nav-list {
 ul.nav-list li.nav-list-item {
   display: inline;
   font-size: large;
-  margin-right: 1.5em;
+  margin-right: 1.5rem;
 }
 
 ul.nav-list li.nav-list-item:last-child {
@@ -69,9 +82,36 @@ ul.nav-list li.nav-list-item.cta {
 }
 
 nav.navbar {
-  padding: 0.75em 0;
+  padding: 0.75rem 0;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
+}
+
+footer.footer .footer-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  height: 100%;
+}
+
+footer.footer .footer-container img,
+footer.footer .footer-container ul,
+footer.footer .footer-container li {
+  height: 100%;
+}
+
+footer.footer .footer-container ul {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.footer-ref-item {
+  margin-right: 1.5rem;
+}
+
+.copyright-statement {
+  margin-top: auto;
+  margin-bottom: auto;
 }
