--- a/src/Web/src/assets/css/styles.css
+++ b/src/Web/src/assets/css/styles.css
@@ -11,6 +11,11 @@ body {
   height: 100%;
 }
 
+html {
+  background-color: hsla(13, 2%, 33%, 1);
+  color: #fff;
+}
+
 ul,
 ol {
   list-style-type: none;
@@ -24,8 +29,9 @@ h3 {
   text-align: center;
 }
 
-.heading {
-  text-align: center;
+img.prop-scale {
+  max-width: 100%;
+  height: auto;
 }
 
 .header {
@@ -42,6 +48,132 @@ h3 {
   flex: 1 0 auto;
 }
 
+.heading {
+  text-align: center;
+  position: relative;
+  padding: 1rem;
+}
+
+.heading-content {
+  position: relative;
+  z-index: 100;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.75);
+  padding: 0.5rem;
+  box-shadow: 0px 0px 1px 4px rgba(0, 0, 0, 0.75);
+  margin: 1.5rem;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 75%;
+}
+
+.heading-content h1 {
+  text-transform: uppercase;
+}
+
+.heading-content h2 {
+  text-transform: uppercase;
+}
+
+.change {
+  font-weight: bold;
+  color: #954c4f;
+  font-size: large;
+}
+
+.heading-blur {
+  position: relative;
+  filter: blur(2px);
+}
+
+.heading-title,
+.heading-subtitle,
+.heading-quote,
+.change {
+  margin: 0;
+}
+
+.heading-title {
+  margin-bottom: 1rem;
+}
+
+.heading-subtitle {
+  margin-bottom: 0.75rem;
+}
+
+.heading-quote {
+  margin-bottom: 0.775rem;
+}
+
+.heading-vid {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.card-list {
+  display: flex;
+  justify-content: stretch;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+
+.container {
+  margin: auto;
+  padding-left: 8rem;
+  padding-right: 8rem;
+  margin-left: 2rem;
+  margin-right: 2rem;
+  margin-top: 2rem;
+}
+
+.card-list-item {
+  border: 1px solid #954c4f;
+  background-color: rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 2px 0px 0px hsl(358, 32%, 24%);
+}
+
+.card-content {
+  display: flex;
+}
+
+.card-content figure {
+  margin: 0;
+  position: relative;
+}
+
+.card-content figcaption {
+  color: #eee;
+  font-style: italic;
+  font-size: smaller;
+  padding: 0.25rem 1rem;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.card-content-description {
+  text-align: left;
+  border-left: 1px solid #954c4f;
+}
+
+.card-title {
+  padding: 0.5rem;
+  margin: 0;
+  background-color: #954c4f;
+  box-shadow: 0px 2px 0px 0px hsl(358, 32%, 24%);
+}
+
+.card-content-description p {
+  padding: 1rem;
+  margin: 0;
+}
+
 .footer {
   flex-shrink: 0;
   height: 2rem;
@@ -56,6 +188,17 @@ h3 {
 }
 
 .nav-brand {
+}
+
+hr.ridge {
+  border-top: 1px solid rgba(0, 0, 0, 0.75);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.125);
+}
+
+hr.separator {
+  margin: 0;
+  border-left: none;
+  border-right: none;
 }
 
 ul.nav-list {
@@ -115,3 +258,24 @@ footer.footer .footer-container ul {
   margin-top: auto;
   margin-bottom: auto;
 }
+
+@media only screen and (min-width: 768px) {
+  .container {
+    margin: 0;
+    margin-top: 0.5rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+
+    padding: 0;
+  }
+}
+
+/*
+@media (min-width: 576px) {
+}
+@media (min-width: 992px) {
+}
+
+@media (min-width: 1200px) {
+}
+*/
