--- a/src/Web/src/assets/css/styles.css
+++ b/src/Web/src/assets/css/styles.css
@@ -29,6 +29,18 @@ h3 {
   text-align: center;
 }
 
+h1 {
+  font-size: 2em;
+}
+
+h2 {
+  font-size: 1.5em;
+}
+
+h3 {
+  font-size: 1.125em;
+}
+
 .blur {
   backdrop-filter: blur(6px);
 }
@@ -154,7 +166,7 @@ img.prop-scale {
 
 .card-list-item h3 {
   margin: 0;
-  padding: 0.25rem;
+  padding: 0.125rem;
   text-align: center;
   text-transform: uppercase;
   text-shadow: 0px 2px 1px rgba(0, 0, 0, 0.5);
@@ -288,7 +300,44 @@ footer.footer .footer-container ul {
   margin-bottom: auto;
 }
 
+@media (min-width: 576px) {
+}
+
 @media only screen and (min-width: 768px) {
+  .container {
+    margin: auto;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    margin-top: 1rem;
+  }
+
+  .card-list-item {
+    flex-basis: 48%;
+  }
+
+  img.prop-scale {
+    height: 16rem;
+  }
+
+  .card-list {
+    justify-content: space-between;
+  }
+}
+
+@media (min-width: 992px) {
+  .container {
+    margin: auto;
+    padding-left: 4rem;
+    padding-right: 4rem;
+    margin-left: 2rem;
+    margin-right: 2rem;
+    margin-top: 2rem;
+  }
+}
+
+@media (min-width: 1200px) {
   .container {
     margin: auto;
     padding-left: 8rem;
@@ -297,22 +346,4 @@ footer.footer .footer-container ul {
     margin-right: 2rem;
     margin-top: 2rem;
   }
-
-  .card-list-item {
-    flex-basis: 50%;
-  }
-
-  img.prop-scale {
-    height: 16rem;
-  }
 }
-
-/*
-@media (min-width: 576px) {
-}
-@media (min-width: 992px) {
-}
-
-@media (min-width: 1200px) {
-}
-*/
