--- a/src/Web/src/assets/css/styles.css
+++ b/src/Web/src/assets/css/styles.css
@@ -12,8 +12,8 @@ body {
 }
 
 html {
-  background-color: hsla(13, 2%, 33%, 1);
   color: #fff;
+  background-color: rgba(86, 83, 82, 1);
 }
 
 ul,
@@ -53,7 +53,6 @@ img.prop-scale {
 
 .header {
   position: sticky;
-  display: block;
 }
 
 .main {
@@ -145,7 +144,6 @@ img.prop-scale {
 .card-list-item {
   border: 1px solid #954c4f;
   background-color: rgba(0, 0, 0, 0.5);
-  box-shadow: 0px 2px 0px 0px hsl(358, 32%, 24%);
   margin-bottom: 1.5rem;
   flex-basis: 100%;
   display: flex;
@@ -153,6 +151,7 @@ img.prop-scale {
   flex-wrap: nowrap;
   text-align: center;
   position: relative;
+  box-shadow: 0px 2px 0px 0px rgb(81, 42, 43), 0px 2px 2px 1px rgba(0, 0, 0, 0.35);
 }
 
 .card-list-item .title {
@@ -269,7 +268,6 @@ nav.navbar {
   padding: 0.75rem 0;
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
   justify-content: space-between;
 }
 
