--- a/src/Web/src/assets/css/styles.css
+++ b/src/Web/src/assets/css/styles.css
@@ -185,6 +185,7 @@ img.prop-scale {
 
 .card-list-item .title,
 .card-list-item figcaption {
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.35) 0%, rgba(0, 0, 0, 0.2) 5%);
   background-color: rgba(0, 0, 0, 0.5);
 }
 
