--- a/src/Web/src/assets/css/styles.css
+++ b/src/Web/src/assets/css/styles.css
@@ -52,10 +52,6 @@ img.prop-scale {
   width: 100%;
 }
 
-.header {
-  position: sticky;
-}
-
 .main {
   display: flex;
   flex-direction: column;
@@ -170,6 +166,10 @@ img.prop-scale {
   z-index: 90;
 }
 
+figure.card-list-item figcaption {
+  margin-bottom: 0;
+}
+
 .card-list-item,
 .card-list-item img {
   border-radius: 0.5rem;
@@ -209,7 +209,6 @@ img.prop-scale {
 
 .footer {
   flex-shrink: 0;
-  height: 2rem;
 }
 
 .kb-craft-logo {
@@ -221,6 +220,8 @@ img.prop-scale {
 }
 
 .nav-brand {
+  padding-top: 0.5rem;
+  text-align: center;
 }
 
 hr.ridge {
@@ -240,16 +241,31 @@ ul.nav-list {
   font-size: large;
   display: flex;
   justify-content: center;
-  flex-direction: row;
+  flex-direction: column;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+ul.nav-list > .nav-list-item > a {
+  text-decoration: none;
+  color: #fff;
+  text-transform: uppercase;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+ul.nav-list > .nav-list-item:hover {
+  background-color: rgb(81, 42, 43);
+}
+
+ul.nav-list > .nav-list-item,
+ul.nav-list > .nav-list-item:hover {
+  transition: background-color ease-in-out 0.125s;
 }
 
 ul.nav-list li.nav-list-item {
-  display: inline;
+  display: block;
   font-size: large;
-  margin-right: 1.5rem;
-}
-
-ul.nav-list li.nav-list-item:last-child {
   margin-right: 0;
 }
 
@@ -257,27 +273,114 @@ ul.nav-list li.nav-list-item.cta {
   text-transform: uppercase;
 }
 
-nav.navbar {
-  padding: 0.75rem 0;
+.about-us {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+}
+
+.about-us .card-list-item {
+  height: fit-content;
+}
+
+.about-us .card-list-item .prop-scale {
+  height: initial;
+  max-height: 100%;
+  width: auto;
+}
+
+.contact form {
+  margin-bottom: 1rem;
+}
+
+.contact article form {
+  display: flex;
+  flex-direction: column;
   justify-content: space-between;
 }
 
-footer.footer .footer-container {
+.contact article form label,
+.contact article form label > * {
+  display: block;
+}
+
+.contact article form label {
+  margin-bottom: 1.25rem;
+}
+
+.contact article form label * {
+  font-family: "Noto Sans", sans-serif;
+}
+
+.contact article form label > * {
+  margin-top: 0.25rem;
+}
+
+.contact article form label input,
+.contact article form label textarea {
+  width: 100%;
+}
+
+.contact article form label textarea {
+  resize: vertical;
+}
+
+.contact form input[type="submit"] {
+  border-radius: 0.5rem;
+  font-size: medium;
+  text-transform: uppercase;
+  font-weight: bold;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+  border: none;
+  color: #fff;
+
+  background-color: rgb(81, 42, 43);
+  box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.35);
+}
+
+.contact article form label .card-list-item {
+  color: #fff;
+  padding: 0.5rem 1rem;
+  text-align: left;
+  margin-bottom: 0;
+}
+
+.g-map {
+  border: 0;
+  width: 100%;
+  height: 24rem;
+  object-fit: contain;
+}
+
+.nav-list-item a {
+  text-decoration: none;
+  display: block;
+}
+
+nav.navbar {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+footer.footer {
+  margin-top: 1rem;
+  padding: 0.5rem 1rem;
   display: flex;
   flex-direction: row;
   justify-content: center;
+  height: 3.5rem;
+  color: #fff;
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+footer.footer img,
+footer.footer ul,
+footer.footer li {
   height: 100%;
 }
 
-footer.footer .footer-container img,
-footer.footer .footer-container ul,
-footer.footer .footer-container li {
-  height: 100%;
-}
-
-footer.footer .footer-container ul {
+footer.footer ul {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
 }
@@ -304,8 +407,36 @@ footer.footer .footer-container ul {
     margin-top: 1rem;
   }
 
+  ul.nav-list {
+    margin: auto;
+  }
+
+  ul.nav-list li.nav-list-item {
+    margin: auto;
+    margin-right: 1.5rem;
+  }
+
+  ul.nav-list li.nav-list-item a {
+    padding: 0.5rem 1rem;
+    margin: auto;
+  }
+
+  ul.nav-list li.nav-list-item:last-child {
+    margin-right: 0;
+  }
+
+  nav.navbar {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
   .card-list-item {
     flex-basis: 48%;
+  }
+
+  ul.nav-list {
+    justify-content: center;
+    flex-direction: row;
   }
 
   img.prop-scale {
@@ -314,6 +445,40 @@ footer.footer .footer-container ul {
 
   .card-list {
     justify-content: space-between;
+  }
+
+  .about-us {
+    flex-direction: row;
+  }
+
+  .about-us article {
+    flex-basis: 60%;
+  }
+
+  .about-us .card-list-item {
+    margin-top: auto;
+  }
+
+  .about-us .card-list-item .prop-scale {
+    height: auto;
+    max-width: 100%;
+    width: initial;
+  }
+
+  .about-us article > h1,
+  .about-us article > h2,
+  .about-us article > p {
+    text-align: left;
+  }
+
+  .kb-craft-logo {
+    padding-left: 1rem;
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+
+  .nav-brand {
+    padding-top: 0;
   }
 }
 
